# buildbytes.in

./: .gitignore  LICENSE  Makefile  README.md  package-lock.json  pyproject.toml
.devcontainer/: devcontainer.json
plan/: Project-Implementation.md  Tech-Stack.md  project-structure.md
src/backend/: manage.py
src/backend/db/: db.sqlite3
src/backend/project/: settings.py  urls.py
src/frontend/: package-lock.json  package.json  tailwind.config.js
src/frontend/src/: App.jsx
src/frontend/src/components/: Cursor.jsx  Hero.jsx  Navbar.jsx
src/frontend/src/hooks/: useMousePosition.jsx
