[tool.poetry]
name = "buildbytes-in"
version = "0.1.0"
description = "New updated website"
authors = ["Prathamesh Khade <pkhade2865@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "buildbytes"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.7"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
